blueprints/patterns/p11-vault/manifests/security/network-policy.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-internal-policy
  namespace: my-gdc-project
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  ingress:
    - from: # Raft and Client traffic
      - podSelector: {}
      ports:
      - port: 8200
      - port: 8201
  egress:
    - to: # DNS
      - namespaceSelector: { matchLabels: { kubernetes.io/metadata.name: kube-system } }
      ports: [{ port: 53, protocol: UDP }]
    - to: # GDC Control Plane (KMS endpoint)
      - ipBlock: { cidr: 0.0.0.0/0 }
      ports: [{ port: 443 }]
